--- a/CSS/01 css fonts/index.html
+++ b/CSS/01 css fonts/index.html
@@ -15,5 +15,6 @@
       Dignissimos expedita labore deserunt!
     </p>
     <h1>Hello JS</h1>
+    <button class="hellobtn">Hello</button>
   </body>
 </html>
