--- a/JS/03 Functions In JS/index.html
+++ b/JS/03 Functions In JS/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     
+    <button onclick="myfun()">Click to Start Calculator</button>
 
+    <!-- <script src="./script.js"></script> -->
 
-    <script src="./script.js"></script>
+    <script>
+
+        alert("hello internal JS")
+    </script>
 </body>
 </html>
