--- a/JS/014 Todo/index.html
+++ b/JS/014 Todo/index.html
@@ -11,7 +11,9 @@
         <button type="submit">Add</button>
     </form>
 
+    <ul id="list">
 
+    </ul>
     <script src="./script.js"></script>
 </body>
 </html>
